[package]
name = "solana-compute-budget"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_compute_budget"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["no-idl"]

[dependencies]
anchor-lang = "0.11.1"
uint = "0.9"

[dev-dependencies]
# rand = "0.7.0"
# solana-runtime = "1.7.4"
solana-bpf-loader-program = "1.7"
solana-sdk = "1.7"
solana_rbpf = "0.2"
